<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bebas"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="#ADADAD"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamatpengirim"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="12dp"
                    app:drawableLeftCompat="@drawable/baseline_location_on_24"
                    tools:ignore="VisualLintLongText" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Store"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="12dp"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="22dp"
                    android:src="@drawable/pakaianadatpapua"
                    android:contentDescription="@string/gambarpakaian" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="150dp"
                    android:layout_marginBottom="83dp"
                    android:text="@string/Baju"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="150dp"
                    android:layout_marginBottom="71dp"
                    android:text="@string/ukuran"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="150dp"
                    android:layout_marginBottom="28dp"
                    android:text="@string/harga2"
                    android:textColor="#AD2804"
                    android:textStyle="normal" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/opsi"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="57dp"
                    android:text="@string/sameday"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintOverlap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="87dp"
                    android:text="@string/akan2"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="303dp"
                    android:layout_marginTop="61dp"
                    android:text="@string/biayapengiriman2"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pesan"
                android:layout_marginStart="12dp"
                android:textColor="#6B6B6B"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/totalproduk"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp"
                    tools:ignore="VisualLintOverlap" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/harga2"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/totalpengiriman"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp"
                    tools:ignore="VisualLintOverlap" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/biayapengiriman2"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/layanan"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp"
                    tools:ignore="VisualLintOverlap" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/biayalayanan"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/penanganan"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp"
                    tools:ignore="VisualLintOverlap" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="90dp"
                    android:text="@string/biayapenanganan"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="139dp"
                    android:text="@string/total"
                    android:textColor="#6B6B6B"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintOverlap" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="139dp"
                    android:text="@string/biayatotal2"
                    android:textColor="#6B6B6B"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="290dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="#6B6B6B"
                    android:text="@string/buat"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="VisualLintButtonSize" />


            </RelativeLayout>



        </LinearLayout>



    </ScrollView>

</FrameLayout>