<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!-- Profile Section -->
            <LinearLayout
                android:id="@+id/profile_section"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <!-- Profile Picture -->
                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/baseline_account_circle_24"
                    android:contentDescription="@string/todo" />

                <!-- Name and Information -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@color/white"
                        android:contentDescription="@string/todo"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:text="@string/history"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_toStartOf="@id/imageButton"
                        android:text="@string/john_doe"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/information"
                        android:layout_below="@id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/imageButton"
                        android:text="@string/_34_have_bought" />

                </RelativeLayout>
            </LinearLayout>

            <!-- Personal Information Section -->
            <LinearLayout
                android:id="@+id/personal_info_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:orientation="vertical">

                <!-- Upload Picture Box -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/upload_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/baseline_photo_camera_24"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/upload_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/upload_your_identify_card" />
                </LinearLayout>

                <!-- NIK -->
                <EditText
                    android:id="@+id/nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:autofillHints=""
                    android:hint="@string/nik"
                    android:inputType="" />

                <!-- Name -->
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:minHeight="48dp"
                    android:autofillHints=""
                    android:inputType="" />

                <!-- Gender -->
                <EditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:minHeight="48dp"
                    android:inputType="" />

                <!-- Place of Birth and Date of Birth -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/place_of_birth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/place_of_birth"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/date_of_birth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/date_of_birth"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <!-- Religion -->
                <EditText
                    android:id="@+id/religion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/religion"
                    android:minHeight="48dp" />

                <!-- Nationality -->
                <EditText
                    android:id="@+id/nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nationality"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/logout"
                    android:backgroundTint="#0386D0" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>